<resources>
  <string name="app_name">FitForever</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_sign_up">SignUpActivity</string>
  <string name="username_hint">User Name</string>
  <string name="password_hint">P@ssw0rd</string>
  <string name="email_hint">email@server.com</string>
  <string name="sign_up_btn_lbl">Sign Up</string>
  <string name="error_title">Oops!</string>
  <string name="username_cannot_be_empty">Username cannot be empty</string>
  <string name="password_cannot_be_empty">Password cannot be empty</string>
  <string name="email_cannot_be_empty">Email cannot be empty</string>
  <string name="sign_up">Sign Up</string>
  <string name="sign_in">Sign In</string>
  <string name="facebook">Facebook</string>
  <string name="google_plus">Google+</string>
  <string name="twitter">Twitter</string>
  <string name="action_logout">Logout</string>
  <string name="fit_forever">Fit Forever</string>
  <string name="username_place_holder">Username</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="search">Search</string>
  <string name="ailment_title"><![CDATA[AILMENT TITLE & TEXT...........]]></string>
</resources>
