<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".ui.auth.LoginActivity">

  <LinearLayout
    android:id="@+id/social_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginBottom="32sp"
    android:orientation="horizontal">

    <Button
      android:id="@+id/button_facebook"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:layout_weight="1"
      android:background="@drawable/bg_gradient"
      android:text="@string/facebook"/>

    <Button
      android:id="@+id/button_google_plus"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:layout_weight="1"
      android:background="@drawable/bg_gradient"
      android:text="@string/google_plus"/>

    <Button
      android:id="@+id/button_twitter"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:layout_weight="1"
      android:background="@drawable/bg_gradient"
      android:text="@string/twitter"/>
  </LinearLayout>

  <EditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_below="@id/social_layout"
    android:hint="@string/username_hint"/>

  <EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/username"
    android:ems="10"
    android:hint="@string/password_hint"
    android:inputType="textPassword"/>

  <RelativeLayout
    style="?android:buttonBarButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:orientation="horizontal">

    <LinearLayout
      android:id="@+id/login_layout"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:orientation="horizontal">

      <Button
        android:id="@+id/button_login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sign_up"/>

      <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sign_in"/>

    </LinearLayout>
  </RelativeLayout>
</RelativeLayout>
